Code refactoring (1/?)